--- a/cc2538em-master/openwsn/firmware/openos/projects/python/SConscript.env
+++ b/cc2538em-master/openwsn/firmware/openos/projects/python/SConscript.env
@@ -223,6 +223,7 @@ callbackFunctionsToChange = [
     # rsvp
     # layerdebug
     # ohlone
+    # osens
     # rex
     # rinfo
     # rrt
@@ -745,16 +746,9 @@ functionsToChange = [
     # osens
     'osens_app_init',
     'osens_desc_receive',
-    'osens_val_receive',
     'osens_desc_sendDone',
     'osens_val_sendDone',
-    'osens_init',
-    'osens_get_brd_desc',
-    'osens_get_point',
-    'osens_get_num_points',
-    'osens_get_point__desc',
-    'osens_get_point_type',
-    'osens_set_point_value',
+    'openqueue_freePacketBuffer',
     #+++++ UDP
     #- debug
     # udpecho
@@ -852,7 +846,6 @@ headerFiles = [
     'openhdlc',
     'openserial',
     'opentimers',
-    'osens',
     #=== libopenos
     'scheduler',
     #=== libopenstack
