--- a/cc2538em-master/openwsn/firmware/openos/projects/python_vs13/oos_openwsn/oos_openwsn.vcxproj.filters
+++ b/cc2538em-master/openwsn/firmware/openos/projects/python_vs13/oos_openwsn/oos_openwsn.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\07-App\ohlone\ohlone_webpages_obj.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\07-App\osens\osens_app_obj.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\03a-IPHC\openbridge_obj.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -115,6 +118,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\build\python_gcc\bsp\boards\python\radiotimer_obj.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\02b-MAChigh\res_obj.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\07-App\rex\rex_obj.c">
@@ -175,21 +181,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\07-App\udpstorm\udpstorm_obj.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\07-App\osens\osens_app_obj.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\02b-MAChigh\otf_obj.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\..\build\python_gcc\drivers\common\osens_obj.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\02b-MAChigh\processIE_obj.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\..\build\python_gcc\openwsn\02b-MAChigh\sixtop_obj.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
